# cross-species-aging-resource

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  requirements.txt
config/: data_manifest.tsv  expected_metrics.tsv  observed_scrna_dann_metrics.tsv  reproduced_metrics_template.tsv
data/: README.md
docs/: REPRODUCTION_STATUS.md  REVIEWER_QUICKSTART.md
models/: README.md
scripts/: check_inputs.py  check_scrna_labels.py  download_hf_artifacts.py  evaluate_scrna_dann.py  train_multimodal_hsc_dann.py  train_scrna_dann_tf.py
